--- a/css/styles.scss
+++ b/css/styles.scss
@@ -10,7 +10,7 @@ $link-decoration: none;
 
 // 4. Include any default map overrides here
 $custom-colors: (
-	"farve": $cyan-400,
+				"farve": $cyan-400,
 );
 
 $theme-colors: map-merge($theme-colors, $custom-colors);
@@ -28,10 +28,18 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
 
 .custom-marker {
 	background-color: #e31515;
-	border-radius: 500%;
-	width: 40px;
-	height: 40px;
-	border: 4px solid white;
+	border-radius: 50%;
+	width: 20px;
+	height: 20px;
+	border: 2px solid white;
+	cursor: pointer;
 }
 
+.mapboxgl-popup {
+	max-width: 200px;
+}
 
+.mapboxgl-popup-content {
+	text-align: center;
+	font-family: 'Open Sans', sans-serif;
+}
