Tilføjet Flagra til popups og gjort et forsøg på at style det i scss, men det dur ik.

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -43,3 +43,8 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
 	text-align: center;
 	font-family: 'Open Sans', sans-serif;
 }
+
+.flagra {
+	height: 10px;
+	width: 10px;
+}
