--- a/css/styles.scss
+++ b/css/styles.scss
@@ -35,16 +35,10 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
 	cursor: pointer;
 }
 
-.mapboxgl-popup {
-	max-width: 200px;
+.popup .mapboxgl-popup-content {
 }
 
-.mapboxgl-popup-content {
-	text-align: center;
-	font-family: 'Open Sans', sans-serif;
-}
-
-.flagra {
-	height: 10px;
-	width: 10px;
+#flagra {
+	width: auto;
+	height: 80px;
 }
