--- a/css/styles.scss
+++ b/css/styles.scss
@@ -35,10 +35,40 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
 	cursor: pointer;
 }
 
-.popup .mapboxgl-popup-content {
-}
-
 #flagra {
 	width: auto;
 	height: 80px;
 }
+
+.mapbox-directions-control {
+	width: 50px;
+	height: 50px;
+}
+
+.popup {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+.popup-content {
+	text-align: center;
+}
+
+.left {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: left;
+}
+
+
+.right {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
+	justify-content: right;
+}
+
+
