--- a/css/styles.scss
+++ b/css/styles.scss
@@ -66,9 +66,11 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
 	justify-content: right;
 }
 
-#openPopupButton {
+.button {
 	background-color: #574B8B;
 	color: white;
 	border-radius: 10px;
 	border: 0;
 }
+
+
